--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.0",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
-    "serve-favicon": "~2.4.5"
+    "pg": "^7.4.1",
+    "sequelize": "^4.34.0",
+    "serve-favicon": "~2.4.5",
+    "sqlite": "^2.9.1"
   }
 }
