--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "sequelize": "^4.34.0",
     "serve-favicon": "~2.4.5",
     "sqlite": "^2.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
