--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sqlite": "^2.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "passport": "^0.4.0"
   }
 }
